Added foundation for attacking a fighter

--- a/Magiko/Data/Languages/de.json
+++ b/Magiko/Data/Languages/de.json
@@ -1,1 +1,1 @@
-{    "fight": "Kämpfen"}
+{    "agility": "Wendigkeit",    "attack": "Angriff",    "back": "Zurück",    "cancel": "Abbrechen",    "defense": "Verteidigung",    "fight": "Kämpfen",    "health": "Gesundheit",    "next": "Weiter",    "precision": "Präzision",    "ready": "Bereit",    "remove": "Entfernen",    "reset": "Zurücksetzen",    "settings": "Einstellungen",    "spAttack": "Sp. Angriff",    "training": "Training"}
