--- a/Magiko/Data/Languages/en.json
+++ b/Magiko/Data/Languages/en.json
@@ -1,1 +1,1 @@
-{    "fight": "Fight"}
+{    "agility": "Agility",    "attack": "Attack",    "back": "Back",    "cancel": "Abbrechen",    "defense": "Defense",    "fight": "Fight",    "health": "Health",    "next": "Next",    "precision": "Precision",    "ready": "Ready",    "remove": "Remove",    "reset": "Reset",    "settings": "Settings",    "spAttack": "Sp. Attack",    "training": "Training"}
