--- a/Magiko/Data/Languages/fr.json
+++ b/Magiko/Data/Languages/fr.json
@@ -1,17 +1,21 @@
 {
     "agility": "Agilité",
+    "allTypes": "Tous Éléments",
     "attack": "Attaque",
     "back": "Retour",
     "cancel": "Annuler",
     "defense": "Défense",
     "fight": "Combattre",
+    "fire": "Feu",
     "health": "Santé",
     "next": "Suivant",
+    "plant": "Plante",
     "precision": "Précision",
     "ready": "Prêt",
     "remove": "Supplimer",
     "reset": "Réinitialiser",
     "settings": "Paramètres",
     "spAttack": "Attaque Sp.",
-    "training": "Entraînement"
+    "training": "Entraînement",
+    "water": "Eau"
 }
