Combined modifiers and states into effects

--- a/Magiko/Data/Languages/fr.json
+++ b/Magiko/Data/Languages/fr.json
@@ -15,7 +15,7 @@
     "remove": "Supplimer",
     "reset": "Réinitialiser",
     "settings": "Paramètres",
-    "spAttack": "Attaque Sp.",
+    "stamina": "Endurance",
     "training": "Entraînement",
     "water": "Eau"
 }
