Skill descriptions are now provided through translation files

--- a/Magiko/Data/Languages/fr.json
+++ b/Magiko/Data/Languages/fr.json
@@ -17,5 +17,6 @@
     "settings": "Paramètres",
     "stamina": "Endurance",
     "training": "Entraînement",
-    "water": "Eau"
+    "water": "Eau",
+    "skill1Description": "Description traduite"
 }
