Added bold text

--- a/Magiko/Data/Languages/fr.json
+++ b/Magiko/Data/Languages/fr.json
@@ -18,14 +18,14 @@
     "stamina": "Endurance",
     "training": "Entraînement",
     "water": "Eau",
-    "freeSpiritDescr": "Fighter can’t be chained.",
-    "scepticDescr": "Fighter can’t be cursed.",
-    "immuneDescr": "Fighter can’t be poisoned.",
-    "rebelliousDescr": "Fighter can’t be locked.",
-    "confidentDescr": "Fighter can’t be confused.",
-    "etherealDescr": "Removes fighter’s element.",
-    "weatherFrogDescr": "Removes fighter’s element.",
-    "contrarianDescr": "Inverts certain received effects.",
-    "cowardDescr": "Switches out when hit.",
+    "freeSpiritDescr": "Fighter can’t be **chained**.",
+    "scepticDescr": "Fighter can’t be **cursed**.",
+    "immuneDescr": "Fighter can’t be **poisoned**.",
+    "rebelliousDescr": "Fighter can’t be **locked**.",
+    "confidentDescr": "Fighter can’t be **confused**.",
+    "etherealDescr": "Removes fighter’s **element**.",
+    "weatherFrogDescr": "**Extends** weather skills.",
+    "contrarianDescr": "**Inverts** certain received effects.",
+    "cowardDescr": "**Switches** out when hit.",
     "skill1Descr": "Description traduite"
 }
