Added more translations

--- a/Magiko/Data/Languages/fr.json
+++ b/Magiko/Data/Languages/fr.json
@@ -19,7 +19,8 @@
     "training": "Entraînement",
     "water": "Eau",
     "usedSkill": "{0} a utilisé **{1}**.",
-    "freeSpiritDescr": "Fighter can’t be **chained**.",
+    "nameFainted": "{0} s'est évanoui.",
+    "freeSpiritDescr": "Le combattant ne peut pas être **enchaîné**",
     "scepticDescr": "Fighter can’t be **cursed**.",
     "immuneDescr": "Fighter can’t be **poisoned**.",
     "rebelliousDescr": "Fighter can’t be **locked**.",
