Added more translations

--- a/Magiko/Data/Languages/fr.json
+++ b/Magiko/Data/Languages/fr.json
@@ -21,6 +21,9 @@
     "usedSkill": "{0} a utilisé **{1}**.",
     "nameFainted": "{0} s'est évanoui.",
     "becameEffect": "{0} s'est **{1}**.",
+    "statIncreases": "**{1}** de {0} a augmenté.",
+    "statDecreases": "**{1}** de {0} a diminué.",
+    "weatherChanged": "Le temps a changé en {0}.",
     "freeSpiritDescr": "Le combattant ne peut pas être **enchaîné**",
     "scepticDescr": "Fighter can’t be **cursed**.",
     "immuneDescr": "Fighter can’t be **poisoned**.",
