Added even more translations

--- a/Magiko/Data/Languages/fr.json
+++ b/Magiko/Data/Languages/fr.json
@@ -19,11 +19,16 @@
     "training": "Entraînement",
     "water": "Eau",
     "usedSkill": "{0} a utilisé **{1}**.",
+    "criticalHit": "C'est un coup critique!",
     "nameFainted": "{0} s'est évanoui.",
     "becameEffect": "{0} s'est **{1}**.",
-    "statIncreases": "**{1}** de {0} a augmenté.",
-    "statDecreases": "**{1}** de {0} a diminué.",
+    "effectFailed": "L'effet a échoué.",
+    "statIncreased": "**{1}** de {0} a augmenté.",
+    "statDecreased": "**{1}** de {0} a diminué.",
     "weatherChanged": "Le temps a changé en {0}.",
+    "weatherFailed": "Le temps n'a pas changé.",
+    "swapWith": "{0} a été échangé avec {1}.",
+    "swapFailed": "{0} n'a pas pu être échangée.",
     "freeSpiritDescr": "Le combattant ne peut pas être **enchaîné**",
     "scepticDescr": "Fighter can’t be **cursed**.",
     "immuneDescr": "Fighter can’t be **poisoned**.",
