Added more translations

--- a/Magiko/Data/Languages/fr.json
+++ b/Magiko/Data/Languages/fr.json
@@ -1,26 +1,36 @@
 {
-    "agility": "Agilité",
-    "allTypes": "Tous Éléments",
+    "allElements": "Tous Éléments",
+    "electric": "Électrik",
+    "fire": "Feu",
+    "ground": "Sol",
+    "metal": "Métal",
+    "plant": "Plante",
+    "water": "Eau",
+    "wind": "Vent",
+    
+    "health": "Santé",
     "attack": "Attaque",
+    "defense": "Défense",
+    "agility": "Agilité",
+    "precision": "Précision",
+    "stamina": "Endurance",
+    
+    "credits": "Remerciements",
+    "settings": "Paramètres",
+    "witches": "Sorcières",
+    
     "back": "Retour",
     "cancel": "Annuler",
-    "defense": "Défense",
     "fight": "Combattre",
-    "fire": "Feu",
-    "health": "Santé",
     "next": "Suivant",
-    "plant": "Plante",
-    "precision": "Précision",
     "ready": "Prêt",
     "remove": "Supplimer",
     "reset": "Réinitialiser",
-    "settings": "Paramètres",
-    "stamina": "Endurance",
     "training": "Entraînement",
-    "water": "Eau",
+    
     "usedSkill": "{0} a utilisé **{1}**.",
     "criticalHit": "C'est un coup critique!",
-    "nameFainted": "{0} s'est évanoui.",
+    "nameFainted": "{0} s'est évanouie.",
     "becameEffect": "{0} s'est **{1}**.",
     "effectFailed": "L'effet a échoué.",
     "statIncreased": "**{1}** de {0} a augmenté.",
@@ -30,10 +40,27 @@
     "swapWith": "{0} a été échangé avec {1}.",
     "swapFailed": "{0} n'a pas pu être échangée.",
     "fail": "Ça a échoué!",
-    "lostHP": "{0} a perdu HP.",
-    "gainedHP": "{0} a gagné HP.",
+    "lostHP": "{0} a perdue HP.",
+    "gainedHP": "{0} a gagnée HP.",
     "healFailed": "La guérison a échoué.",
-    "namePerished": "{0} a péri.",
-    "freeSpiritDescr": "Le combattant ne peut pas être **enchaîné**",
-    "skill1Descr": "Description traduite"
+    "namePerished": "{0} a périe.",
+    
+    "genericPunchDescr": "Frappe adversaire",
+    
+    "defensiveDescr": "**Défense** diminuée en cas de santé faible",
+    "freeSpiritDescr": "Ne peut pas être **enchaînée**",
+    "scepticDescr": "Ne peut pas être **hantée**",
+    "immuneDescr": "Ne peut pas être **empoisonnée**",
+    "rebelliousDescr": "Ne peut pas être **restreinte**",
+    "confidentDescr": "Ne peut pas être **confondue**",
+    "etherealDescr": "Supprime son propre **élément**",
+    "weatherFrogDescr": "**Prolonge** les sorts météorologiques",
+    "contrarianDescr": "**Inverse** les effets reçus",
+    "retaliatorDescr": "**Maudit** l'adversaire après s'être évanoui",
+    "enragedDescr": "**Attaque** augmentée en cas de santé faible",
+    "lastWillDescr": "**Protège** le successeur",
+    "naturalCureDescr": "**Supprime** l'effet après l'échange",
+    "intimidateDescr": "Diminue **l'attaque** de l'adversaire",
+    
+    "creditBy": "{0} de {1}"
 }
