Fixed mistake in json file

--- a/Magiko/Data/Languages/fr.json
+++ b/Magiko/Data/Languages/fr.json
@@ -58,7 +58,7 @@
     "haunted": "hantée",
     "chained": "enchaînée",
     "invigorated": "revigorée",
-    "exhausted": "épuisée"
+    "exhausted": "épuisée",
     "restricted": "restreinte",
     "enlightened": "éclairée",
     
