Added more translations

--- a/Magiko/Data/Languages/fr.json
+++ b/Magiko/Data/Languages/fr.json
@@ -24,6 +24,7 @@
     "fight": "Combattre",
     "next": "Suivant",
     "ready": "Prêt",
+    "rematch": "Revanche",
     "remove": "Supplimer",
     "reset": "Réinitialiser",
     "training": "Entraînement",
@@ -32,6 +33,9 @@
     "sound": "Son",
     "voices": "Voix",
     "language": "Langue",
+    
+    "loading": "Chargement...",
+    "waiting": "En attente de joueur...",
     
     "usedSkill": "{0} a utilisé **{1}**.",
     "criticalHit": "C'est un coup critique!",
@@ -64,20 +68,41 @@
     
     "genericPunchDescr": "Frappe adversaire",
     
+    "defensive": "Défensive",
     "defensiveDescr": "**Défense** diminuée en cas de santé faible",
-    "freeSpiritDescr": "Ne peut pas être **enchaînée**",
+    "freeSpiriteded": "Libre d'esprit",
+    "freeSpiritedDescr": "Ne peut pas être **enchaînée**",
+    "sceptic": "Sceptique",
     "scepticDescr": "Ne peut pas être **hantée**",
+    "immune": "Immunisée",
     "immuneDescr": "Ne peut pas être **empoisonnée**",
+    "rebellious": "Rebelle",
     "rebelliousDescr": "Ne peut pas être **restreinte**",
+    "confident": "Confiante",
     "confidentDescr": "Ne peut pas être **confondue**",
+    "ethereal": "Éthérée",
     "etherealDescr": "Supprime son propre **élément**",
+    "weatherFrog": "Grenouille météo",
     "weatherFrogDescr": "**Prolonge** les sorts météorologiques",
+    "contrarian": "Anticonformiste",
     "contrarianDescr": "**Inverse** les effets reçus",
-    "retaliatorDescr": "**Maudit** l'adversaire après s'être évanoui",
+    "retaliation": "Vengeance",
+    "retaliationDescr": "**Maudit** l'adversaire après s'être évanoui",
+    "enraged": "Furieuse",
     "enragedDescr": "**Attaque** augmentée en cas de santé faible",
+    "lastWill": "Dernière volonté",
     "lastWillDescr": "**Protège** le successeur",
+    "naturalCure": "Remède naturel",
     "naturalCureDescr": "**Supprime** l'effet après l'échange",
+    "intimidate": "Intimider",
     "intimidateDescr": "Diminue **l'attaque** de l'adversaire",
+    
+    "allrounder": "Polyvalente",
+    "assassin": "Assassin",
+    "berserker": "Berserker",
+    "cleric": "Clerc",
+    "fighter": "Combattante",
+    "ranger": "Rôdeur",
     
     "creditBy": "{0} de {1}"
 }
