Changed that resistance only applies to negative hexes

--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -85,7 +85,7 @@
     
     "defensive": "Défensive",
     "defensiveDescr": "**Défense** diminuée en cas de santé faible",
-    "freeSpiriteded": "Libre d'esprit",
+    "freeSpirited": "Libre d'esprit",
     "freeSpiritedDescr": "Ne peut pas être **enchaînée**",
     "sceptic": "Sceptique",
     "scepticDescr": "Ne peut pas être **hantée**",
