Added more translations

--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -51,6 +51,40 @@
     "loading": "Chargement...",
     "waiting": "En attente de joueur...",
     
+    "cautious": "Prudente",
+    "cocky": "Arrogante",
+    "guarded": "Réservée",
+    "gullible": "Crédule",
+    "hasty": "Hâtif",
+    "meticulous": "Méticuleuse",
+    "modest": "Modeste",
+    "reckless": "Téméraire",
+    "stubborn": "Obstiné",
+    "timid": "Timide",
+    
+    "amulet": "Amulette maudite",
+    "amuletDescr": "**Inverse** les enchantements reçus",
+    "book": "Livre interdit",
+    "bookDescr": "**Maudit** l'adversaire après s'être évanoui",
+    "charm": "Charme de protection",
+    "charmDescr": "Augmente **défense** en cas de santé faible",
+    "corset": "Corset non ajusté",
+    "corsetDescr": "Augmente **l'attaque** mais limite les sorts",
+    "crystal": "Cristal météo",
+    "crystalDescr": "**Prolonge** les sorts météorologiques",
+    "grimoire": "Ancien Grimoire",
+    "grimoireDescr": "**Supprime** les enchantements après l'échange",
+    "mask": "Masque effrayant",
+    "maskDescr": "Diminue **l'attaque** de l'adversaire",
+    "ring": "Anneau béni",
+    "ringDescr": "Supprime son propre **élément**",
+    "talisman": "Talisman magique",
+    "talismanDescr": "Protège contre **les enchantements**",
+    "wand": "Baguette de Sureau",
+    "wandDescr": "Augmente **attaque** en cas de santé faible",
+    "lastWill": "Dernière volonté",
+    "lastWillDescr": "**Protège** le successeur",
+    
     "coven": "Coven",
     "covenDescr": "covenDescr",
     "forfeit": "Forfait",
