Added new artifact

--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -68,6 +68,8 @@
     "bookDescr": "**Maudit** l'adversaire après s'être évanoui",
     "charm": "Charme de protection",
     "charmDescr": "Augmente **défense** en cas de santé faible",
+    "cornucopia": "Corne d'abondance",
+    "cornucopiaDescr": "**Guérit** à chaque tour",
     "corset": "Corset non ajusté",
     "corsetDescr": "Augmente **l'attaque** mais limite les sorts",
     "crystal": "Cristal météo",
