Added new artifact

--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -80,6 +80,8 @@
     "maskDescr": "Diminue **l'attaque** de l'adversaire",
     "ring": "Anneau béni",
     "ringDescr": "Supprime son propre **élément**",
+    "talaria": "Sandales ailées",
+    "talariaDescr": "**Échange** après avoir été touché",
     "talisman": "Talisman magique",
     "talismanDescr": "Protège contre **les enchantements**",
     "wand": "Baguette de Sureau",
