--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -5,9 +5,9 @@
     "celeste": "Celeste",
     "freya": "Freya",
     "luna": "Luna",
+    "moira": "Moira",
     "rhonda": "Rhonda",
     "siobhan": "Siobhan",
-    "xenia": "Xenia",
     
     "allElements": "Tous Éléments",
     "electric": "Électrik",
