--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -157,5 +157,5 @@
     "tutorial11": "choose moira the plant witch. plant is effective against water. swap will cost a turn",
     "tutorial12": "lets attack again. this time we will have advantage",
     "tutorial13": "click on first spell if long press -> description",
-    "tutorial14": "see the difference? you learned the basics quit tutorial by clicking forfeit"
+    "tutorial14": "see the difference? quit tutorial by clicking forfeit"
 }
