Added new artifact

--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -1,14 +1,6 @@
 {
     "fr": "Français",
     
-    "anya": "Anya",
-    "celeste": "Celeste",
-    "freya": "Freya",
-    "luna": "Luna",
-    "moira": "Moira",
-    "rhonda": "Rhonda",
-    "siobhan": "Siobhan",
-    
     "allElements": "Tous Éléments",
     "electric": "Électrik",
     "fire": "Feu",
@@ -69,7 +61,7 @@
     "book": "Livre interdit",
     "bookDescr": "**Maudit** l'adversaire après s'être évanoui",
     "charm": "Charme de protection",
-    "charmDescr": "Augmente **défense** en cas de santé faible",
+    "charmDescr": "Augmente **défense** à faible PV",
     "cornucopia": "Corne d'abondance",
     "cornucopiaDescr": "**Guérit** à chaque tour",
     "corset": "Corset non ajusté",
@@ -84,12 +76,14 @@
     "mirrorDescr": "**Copie** l'artefact de l'adversaire",
     "ring": "Anneau béni",
     "ringDescr": "Supprime son propre **élément**",
+    "sevenLeague": "Bottes de sept lieues",
+    "sevenLeagueDescr": "Augmente **agilité** à faible PV",
     "talaria": "Sandales ailées",
     "talariaDescr": "**Échange** après avoir été touché",
     "talisman": "Talisman magique",
     "talismanDescr": "Protège contre **les enchantements**",
     "wand": "Baguette de Sureau",
-    "wandDescr": "Augmente **attaque** en cas de santé faible",
+    "wandDescr": "Augmente **attaque** à faible PV",
     "lastWill": "Dernière volonté",
     "lastWillDescr": "**Protège** le successeur",
     
