Added new artifact

--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -70,6 +70,8 @@
     "crystalDescr": "**Prolonge** les sorts météorologiques",
     "grimoire": "Ancien Grimoire",
     "grimoireDescr": "**Supprime** les enchantements après l'échange",
+    "incense": "Encens fort",
+    "incenseDescr": "**Intensifie** les enchantements reçus",
     "mask": "Masque effrayant",
     "maskDescr": "Diminue **l'attaque** de l'adversaire",
     "mirror": "Miroir à main",
