Added english translations

--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -133,9 +133,64 @@
     "exhausted": "épuisée",
     "restricted": "restreinte",
     
-    "protectionDescr": "block, do not repeat",
-    "restorationDescr": "50% heal",
+    "bombDescr": "90% bomb opponent",
+    "changeElementDescr": "changes opponent's element",
+    "clearEffectsDescr": "clears all hexes and weather",
+    "confusionDescr": "90% confuse opponent",
+    "copyAttackDescr": "copies opponent's last attack",
+    "defenseDownDescr": "lowers opponent's DEF, chance to haunt opponent",
+    "defenseUpDescr": "increases DEF, get blessed",
+    "droughtDescr": "invokes drought",
+    "electricSimpleAttackDescr": "80 power attack",
+    "electricSpecialAttackDescr": "45 damage attack",
+    "electricSpecial2AttackDescr": "90 power attack, recoil",
+    "electricSwapAttackDescr": "60 power attack, swap out",
+    "endureDescr": "survive attack with 1 HP",
+    "exhaustionDescr": "90% exhaust & slow down opponent",
+    "firePriorityAttackDescr": "60 power attack, priority",
+    "fireSimpleAttackDescr": "80 power attack",
+    "fireSpecialAttackDescr": "85 power attack, lowers own PRC",
+    "fireSpecial2AttackDescr": "45 damage attack",
+    "forceOutDescr": "forces opponent out",
+    "groundSimpleAttackDescr": "80 power attack",
+    "groundSpecialAttackDescr": "? power attack, depends on lost HP",
+    "groundSpecial2AttackDescr": "50 power attack, hits twice",
+    "groundSpecial3AttackDescr": "40 power attack, breaks shield",
+    "hauntDescr": "90% haunt opponent",
+    "healingEffectDescr": "heals while active, increases own RES",
+    "healingWishDescr": "faint, successor gets healed to full HP",
+    "invertHexesDescr": "refreshes & inverts opponent's hexes",
+    "lightRainDescr": "invokes lightRain",
+    "bombDescr": "90% lock opponent",
+    "metalSimpleAttackDescr": "80 power attack",
+    "metalSpecialAttackDescr": "75 power attack, chance to lower opponent's ATK",
+    "metalSpecial2AttackDescr": "? power attack, depends on current HP",
+    "metalSwapAttackDescr": "60 power attack, swap out",
+    "mysticWeatherDescr": "invokes mysticWeather",
+    "plantSimpleAttackDescr": "80 power attack",
+    "plantSpecialAttackDescr": "70 power attack, increases with use",
+    "plantSpecial2AttackDescr": "70 power attack, invigorates",
+    "plantSpecial3AttackDescr": "? power attack, depends on current HP",
+    "poisonDescr": "90% poison opponent",
+    "powerUpDescr": "increases own ATK & invigorate",
+    "precisionUpDescr": "increases own PRC & RES",
+    "protectionDescr": "blocks attacks, do not repeat",
+    "removeArtifactDescr": "remove opponent's artifact",
+    "restorationDescr": "heal 50% health",
+    "sandstormDescr": "invokes sandstorm",
+    "smogDescr": "invokes smog",
+    "speedUpDescr": "increases own AGL & invigorates",
     "sunnyDayDescr": "invokes sunnyDay",
+    "swapHexesDescr": "swaps hexes with opponent",
+    "thunderstormDescr": "invokes thunderstorm",
+    "trapDescr": "90% chains opponent",
+    "waterSimpleAttackDescr": "80 power attack",
+    "waterSpecialAttackDescr": "75 power attack, chance to bomb opponent",
+    "waterSpecial2AttackDescr": "40 power attack, breaks shield",
+    "windPriorityAttackDescr": "60 power attack, priority",
+    "windSimpleAttackDescr": "80 power attack",
+    "windSpecialAttackDescr": "50 power attack, hits twice",
+    "waterSpecialAttackDescr": "75 power attack, chance to lower opponent's resistance",
     
     "creditBy": "{0} de {1}",
     
