--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -77,7 +77,7 @@
     "mirror": "Miroir à main",
     "mirrorDescr": "**Copie** l'artefact de l'adversaire",
     "ring": "Anneau béni",
-    "ringDescr": "Supprime son propre **élément**",
+    "ringDescr": "Protège du **K.O.** quand plein PV",
     "sevenLeague": "Bottes de sept lieues",
     "sevenLeagueDescr": "Augmente **agilité** à faible PV",
     "talaria": "Sandales ailées",
