--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -38,11 +38,18 @@
     "music": "Musique",
     "sound": "Son",
     "voices": "Voix",
+    "haptic": "Haptique",
+    "enabled": "Activé",
+    "disabled": "Désactivé",
     "language": "Langue",
     "textSpeed": "Vitesse du texte",
     "slow": "Lente",
     "normal": "Normale",
     "fast": "Rapide",
+    "covens": "Covens",
+    "artifacts": "Artefacts",
+    "limited": "Limité",
+    "unlimited": "Illimité",
     
     "loading": "Chargement...",
     "waiting": "En attente de joueur...",
@@ -103,6 +110,7 @@
     "spellsDescr": "spellsDescr",
     
     "hpBar": "{0}/{1}PV",
+    "fightBegin": "Que le combat commence!",
     "usedSpell": "{0} a utilisé **{1}**.",
     "hit": "C'est un coup.",
     "criticalHit": "C'est un coup critique!",
@@ -121,6 +129,13 @@
     "gainedHP": "{0} a gagnée HP.",
     "healFailed": "La guérison a échoué.",
     "namePerished": "{0} a périe.",
+    "retreated": "{0} s'est retirée.",
+    "elementChanged": "L'élément de {0} est maintenant {1}.",
+    "elementRemoved": "L'élément de {0} a été supprimé",
+    "forcedOut": "{0} a été expulsée.",
+    "swappedArtifacts": "Les artefacts ont été échangés.",
+    "clearedHexes": "Les enchantements ont été supprimés.",
+    "swappedHexes": "Les enchantements ont été échangés.",
     
     "superEffective": "Super efficace",
     "veryEffective": "Très efficace",
@@ -141,19 +156,20 @@
     
     "creditBy": "{0} de {1}",
     
-    "tutorial0": "click on + button to select witch",
-    "tutorial1": "select witch",
-    "tutorial2": "click on selected witch to edit her",
-    "tutorial3": "change her nature and observe how her stats change. each nature has drawbacks and benefits",
-    "tutorial4": "now scroll down to give her an artifact with special effects",
-    "tutorial5": "let's add another witch. you can have up to four witches in a team",
-    "tutorial6": "edit her to your liking and click on the witch when you are ready",
-    "tutorial7": "click on ready to start fight",
-    "tutorial8": "click on continue and then click on spells",
-    "tutorial9": "click on first spell",
-    "tutorial10": "big hit because element disadvantage. let's swap our witch out",
-    "tutorial11": "choose moira the plant witch. plant is effective against water. swap will cost a turn",
-    "tutorial12": "lets attack again. this time we will have advantage",
-    "tutorial13": "click on first spell if long press -> description",
-    "tutorial14": "see the difference? quit tutorial by clicking forfeit"
+    "tutorial0": "cliquez sur le bouton + pour sélectionner la sorcière",
+    "tutorial1": "sélectionner la sorcière",
+    "tutorial2": "cliquez sur la sorcière sélectionnée pour la modifier",
+    "tutorial3": "changer sa nature et observer comment ses statistiques changent. chaque nature a ses inconvénients et ses avantages",
+    "tutorial4": "faites maintenant défiler vers le bas pour lui donner un artefact avec des effets spéciaux",
+    "tutorial5": "ajoutons une autre sorcière. vous pouvez avoir jusqu'à quatre sorcières dans une équipe",
+    "tutorial6": "modifiez-la à votre guise et cliquez sur la sorcière lorsque vous êtes prêt",
+    "tutorial7": "cliquez sur prêt à commencer le combat",
+    "tutorial8": "cliquez sur continuer puis cliquez sur sorts",
+    "tutorial9": "cliquez sur le premier sort",
+    "tutorial10": "grand succès car désavantage de l'élément. échangeons notre sorcière",
+    "tutorial11": "choisissez la sorcière des plantes. la plante est efficace contre l'eau. l'échange coûtera un tour",
+    "tutorial12": "attaquons encore. cette fois nous aurons l'avantage",
+    "tutorial13": "cliquer sur le premier sort, appui long -> description",
+    "tutorial14": "regarde la différence? quitter le didacticiel en cliquant sur abandonner",
+    "tutorial15": "cliquez sur rematch si vous voulez rejouer"
 }
