Added more trnaslations

--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -24,6 +24,9 @@
     "credits": "Remerciements",
     "settings": "Paramètres",
     "overview": "Aperçu",
+    "training": "Entraînement",
+    "help": "Aide",
+    "tutorial": "Didacticiel",
     
     "back": "Retour",
     "cancel": "Annuler",
@@ -33,7 +36,7 @@
     "rematch": "Revanche",
     "remove": "Supplimer",
     "reset": "Réinitialiser",
-    "training": "Entraînement",
+    "randomize": "Randomiser",
     
     "music": "Musique",
     "sound": "Son",
@@ -68,7 +71,7 @@
     "noArtifact": "Aucun artefact",
     "noArtifactDescr": "Ne fait rien",
     "amulet": "Amulette maudite",
-    "amuletDescr": "**Inverse** les enchantements reçus",
+    "amuletDescr": "**Inverse** les sortilèges reçus",
     "charm": "Charme de protection",
     "charmDescr": "Augmente **défense** à faible PV",
     "cornucopia": "Corne d'abondance",
@@ -78,9 +81,9 @@
     "crystal": "Cristal météo",
     "crystalDescr": "**Prolonge** les sorts météorologiques",
     "grimoire": "Ancien Grimoire",
-    "grimoireDescr": "**Supprime** les enchantements après l'échange",
+    "grimoireDescr": "**Supprime** les sortilèges après l'échange",
     "incense": "Encens fort",
-    "incenseDescr": "**Intensifie** les enchantements reçus",
+    "incenseDescr": "**Intensifie** les sortilèges reçus",
     "mask": "Masque effrayant",
     "maskDescr": "Diminue **l'attaque** de l'adversaire",
     "potion": "Potion de soin",
@@ -92,7 +95,7 @@
     "talaria": "Sandales ailées",
     "talariaDescr": "**Échange** après avoir été touché",
     "talisman": "Talisman magique",
-    "talismanDescr": "Protège contre **les enchantements**",
+    "talismanDescr": "Protège contre **les sortilèges**",
     "wand": "Baguette de Sureau",
     "wandDescr": "Augmente **attaque** à faible PV",
     
@@ -128,8 +131,8 @@
     "elementRemoved": "L'élément de {0} a été supprimé",
     "forcedOut": "{0} a été expulsée.",
     "swappedArtifacts": "Les artefacts ont été échangés.",
-    "clearedHexes": "Les enchantements ont été supprimés.",
-    "swappedHexes": "Les enchantements ont été échangés.",
+    "clearedHexes": "Les sortilèges ont été supprimés.",
+    "swappedHexes": "Les sortilèges ont été échangés.",
     
     "superEffective": "Super efficace",
     "veryEffective": "Très efficace",
@@ -149,6 +152,16 @@
     "restricted": "restreinte",
     
     "creditBy": "{0} de {1}",
+    
+    "help1": "Éléments",
+    "help1Descr": "chaque sorcière a son propre élément, son élément et l'élément du sort lui donne plus ou moins de pouvoir contre les autres sorcières.",
+    "help2": "Cycle élémentaire",
+    "help3": "Sorts",
+    "help3Descr": "les sorts sont utilisés pour attaquer, soigner ou ensorceler les sorcières. ils coûtent du mana.",
+    "help4": "Sortilèges",
+    "help4Descr": "un enchantement applique un effet à une sorcière pendant plusieurs tours. Les enchantements peuvent augmenter ou diminuer les statistiques, infliger des dégâts ou soigner par tour, et plus encore. Une sorcière peut avoir jusqu'à trois enchantements et peut avoir des multiples du même enchantement.",
+    "help5": "Météo",
+    "help5Descr": "la météo augmente la puissance de certains éléments.",
     
     "tutorial0": "cliquez sur le bouton + pour sélectionner la sorcière",
     "tutorial1": "sélectionner la sorcière",
