Improved implementation restrict hex

--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -145,7 +145,7 @@
     "confused": "confondue",
     "bombed": "bombardée",
     "blessed": "bénie",
-    "haunted": "hantée",
+    "blocked": "bloquée",
     "chained": "enchaînée",
     "invigorated": "revigorée",
     "exhausted": "épuisée",
