Reworked and added new element

--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -7,12 +7,13 @@
     "electric": "Électrik",
     "fire": "Feu",
     "ground": "Sol",
+    "ice": "Glace",
     "metal": "Métal",
     "plant": "Plante",
     "rock": "Roche",
-    "snow": "Neige",
     "water": "Eau",
     "wind": "Vent",
+    "wood": "Bois",
     
     "health": "Santé",
     "attack": "Attaque",
