--- a/Witchery/Data/Languages/fr.json
+++ b/Witchery/Data/Languages/fr.json
@@ -134,6 +134,7 @@
     "swappedArtifacts": "Les artefacts ont été échangés.",
     "clearedHexes": "Les sortilèges ont été supprimés.",
     "swappedHexes": "Les sortilèges ont été échangés.",
+    "nameProvoked": "{0} a été provoquée.",
     
     "superEffective": "Super efficace",
     "veryEffective": "Très efficace",
