Added new artifact

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -94,6 +94,8 @@
     "ringDescr": "Protège du **K.O.** quand plein PV",
     "sevenLeague": "Bottes de sept lieues",
     "sevenLeagueDescr": "Augmente **agilité** à faible PV",
+    "sword": "Épée à double tranchant",
+    "swordDescr": "Augmente **l'attaque**, les attaques ont du recul",
     "talaria": "Sandales ailées",
     "talariaDescr": "**Échange** après avoir été touché",
     "talisman": "Talisman magique",
