Added new translations

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -103,12 +103,45 @@
     "wand": "Baguette de Sureau",
     "wandDescr": "Augmente **attaque** à faible PV",
     
+    "info": "Information",
+    "infoDescr": "Recevoir des informations sur le combat",
     "team": "Coven",
     "teamDescr": "Échangez les combattantes de votre équipe",
     "forfeit": "Forfait",
     "forfeitDescr": "Se rendre et mettre fin au combat",
     "spells": "Sorts",
     "spellsDescr": "Utilisez la magie pour combattre",
+    
+    "noHexes": "Pas d'enchantements",
+    "attackBoostDescr": "Augmente **l'attaque**",
+    "attackDropDescr": "Diminue **l'attaque**",
+    "defenseBoostDescr": "Augmente **la défense**",
+    "defenseDropDescr": "Diminue **la défense**",
+    "agilityBoostDescr": "Augmente **l'agilité**",
+    "agilityDropDescr": "Diminue **l'agilité**",
+    "precisionBoostDescr": "Augmente **la précision**",
+    "precisionDropDescr": "Diminue **la précision**",
+    "resistanceBoostDescr": "Augmente **la résistance**",
+    "resistanceDropDescr": "Diminue **la résistance**",
+    "poisonedDescr": "Diminue PV à chaque tour",
+    "healedDescr": "Augmente PV à chaque tour",
+    "confusedDescr": "Randomise le sort",
+    "bombedDescr": "Diminue PV après l'expiration de l'enchantement",
+    "blessedDescr": "Protège contre les enchantements **négatifs**",
+    "blockedDescr": "Empêche la guérison",
+    "chainedDescr": "Empêche l'échange",
+    "invigoratedDescr": "Diminue **le coût**",
+    "exhaustedDescr": "Augmente **le coût**",
+    "restrictedDescr": "Seul le dernier sort peut être utilisé",
+    
+    "weather": "Météo",
+    "noWeather": "Aucun effet",
+    "blizzardDescr": "Augmente **glace** & **vent**",
+    "droughtDescr": "Augmente **sol** & **feu**",
+    "fullMoonDescr": "Augmente **éther** & **bois**",
+    "mysticWeatherDescr": "Augmente **électrik** & **métal**",
+    "rainDescr": "Augmente **plante** & **eau**",
+    "sandstormDescr": "Augmente **roche** & **carie**",
     
     "hpBar": "{0}/{1}PV",
     "fightBegin": "Que le combat commence!",
@@ -141,8 +174,8 @@
     "superEffective": "Super efficace",
     "veryEffective": "Très efficace",
     "effective": "Efficace",
-    "notVeryEffective": "Nicht sehr efficace",
-    "notEffective": "Pas très efficace",
+    "notVeryEffective": "Pas très efficace",
+    "notEffective": "Pas efficace",
     
     "poisoned": "empoisonnée",
     "healed": "guérie",
