Added new artifact

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -84,6 +84,8 @@
     "crystalDescr": "**Prolonge** les sorts météorologiques",
     "grimoire": "Ancien Grimoire",
     "grimoireDescr": "**Supprime** les sortilèges après l'échange",
+    "helmet": "Casque épineux",
+    "helmetDescr": "Blesse l'agresseur",
     "incense": "Encens fort",
     "incenseDescr": "**Intensifie** les sortilèges reçus",
     "mask": "Masque effrayant",
